k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: dupontdoku-staging
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app: backend-deployment
    template:
        metadata:
            labels:
                app: backend-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: backend-deployment
                    resources:
                        limits:
                            cpu: "300m"
                            memory: "250M"
                        requests:
                            cpu: "150m"
                            memory: "150M"
                    image: "rhaversen/dupontdoku-backend:${GITHUB_SHA}"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: /service/livez
                            port: 5001
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: /service/readyz
                            port: 5001
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 5001
